--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/document.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e18153dca3.js" crossorigin="anonymous"></script>
     <title>Dom project</title>
 </head>
@@ -77,6 +78,6 @@
     <textarea id="textarea" placeholder="Type your text here..."></textarea>
 
     <script src="js/main.js"></script>
-    
+
 </body>
 </html>
